--- a/config/prometheus/prometheus.yaml
+++ b/config/prometheus/prometheus.yaml
@@ -10,3 +10,7 @@ scrape_configs:
   - job_name: 'tempo'
     static_configs:
       - targets: [ 'tempo:3200' ]
+
+  - job_name: 'promtail'
+    static_configs:
+      - targets: [ 'promtail:9080' ]
