--- a/config/prometheus/prometheus.yaml
+++ b/config/prometheus/prometheus.yaml
@@ -14,3 +14,7 @@ scrape_configs:
   - job_name: 'promtail'
     static_configs:
       - targets: [ 'promtail:9080' ]
+
+  - job_name: 'loki'
+    static_configs:
+      - targets: [ 'loki:3100' ]
